crates/kuben-platform/src/render/snapshots/kuben_platform__render__tests__cron_job.snap
---
source: crates/kuben-platform/src/render/mod.rs
expression: "pretty(&render(&cron, &caps).expect(\"cron\"))"
---
[
  {
    "apiVersion": "batch/v1",
    "kind": "CronJob",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "kuben",
        "kuben.dev/app": "api",
        "kuben.dev/environment": "shop-prod",
        "kuben.dev/process": "tick",
        "kuben.dev/project": "shop"
      },
      "name": "api-tick",
      "namespace": "kb-shop-prod"
    },
    "spec": {
      "concurrencyPolicy": "Forbid",
      "failedJobsHistoryLimit": 3,
      "jobTemplate": {
        "metadata": {
          "labels": {
            "app.kubernetes.io/managed-by": "kuben",
            "kuben.dev/app": "api",
            "kuben.dev/environment": "shop-prod",
            "kuben.dev/process": "tick",
            "kuben.dev/project": "shop"
          }
        },
        "spec": {
          "activeDeadlineSeconds": 3600,
          "backoffLimit": 1,
          "template": {
            "metadata": {
              "labels": {
                "app.kubernetes.io/managed-by": "kuben",
                "kuben.dev/app": "api",
                "kuben.dev/environment": "shop-prod",
                "kuben.dev/process": "tick",
                "kuben.dev/project": "shop"
              }
            },
            "spec": {
              "automountServiceAccountToken": false,
              "containers": [
                {
                  "command": [
                    "sh",
                    "-c",
                    "echo tick"
                  ],
                  "env": [],
                  "image": "busybox@sha256:2222222222222222222222222222222222222222222222222222222222222222",
                  "name": "tick",
                  "resources": {
                    "limits": {
                      "memory": "128Mi"
                    },
                    "requests": {
                      "cpu": "50m",
                      "memory": "64Mi"
                    }
                  },
                  "securityContext": {
                    "allowPrivilegeEscalation": false,
                    "capabilities": {
                      "drop": [
                        "NET_RAW"
                      ]
                    },
                    "seccompProfile": {
                      "type": "RuntimeDefault"
                    }
                  }
                }
              ],
              "enableServiceLinks": false,
              "restartPolicy": "Never",
              "securityContext": {
                "seccompProfile": {
                  "type": "RuntimeDefault"
                }
              },
              "terminationGracePeriodSeconds": 30
            }
          },
          "ttlSecondsAfterFinished": 86400
        }
      },
      "schedule": "*/30 * * * *",
      "startingDeadlineSeconds": 300,
      "successfulJobsHistoryLimit": 3
    }
  }
]
