crates/kuben-platform/src/render/snapshots/kuben_platform__render__tests__volume.snap
---
source: crates/kuben-platform/src/render/mod.rs
expression: "pretty(&render(&store, &caps).expect(\"volume\"))"
---
[
  {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": {
      "annotations": {
        "kuben.dev/retain": "true"
      },
      "labels": {
        "app.kubernetes.io/managed-by": "kuben",
        "kuben.dev/app": "api",
        "kuben.dev/environment": "shop-prod",
        "kuben.dev/project": "shop"
      },
      "name": "api-data",
      "namespace": "kb-shop-prod"
    },
    "spec": {
      "accessModes": [
        "ReadWriteOnce"
      ],
      "resources": {
        "requests": {
          "storage": "5Gi"
        }
      }
    }
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "kuben",
        "kuben.dev/app": "api",
        "kuben.dev/environment": "shop-prod",
        "kuben.dev/process": "web",
        "kuben.dev/project": "shop"
      },
      "name": "api-web",
      "namespace": "kb-shop-prod"
    },
    "spec": {
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "revisionHistoryLimit": 5,
      "selector": {
        "matchLabels": {
          "kuben.dev/app": "api",
          "kuben.dev/process": "web"
        }
      },
      "strategy": {
        "type": "Recreate"
      },
      "template": {
        "metadata": {
          "labels": {
            "app.kubernetes.io/managed-by": "kuben",
            "kuben.dev/app": "api",
            "kuben.dev/environment": "shop-prod",
            "kuben.dev/process": "web",
            "kuben.dev/project": "shop"
          }
        },
        "spec": {
          "automountServiceAccountToken": false,
          "containers": [
            {
              "env": [
                {
                  "name": "PORT",
                  "value": "8080"
                }
              ],
              "image": "nginx@sha256:3333333333333333333333333333333333333333333333333333333333333333",
              "name": "web",
              "ports": [
                {
                  "containerPort": 8080,
                  "name": "http",
                  "protocol": "TCP"
                }
              ],
              "readinessProbe": {
                "failureThreshold": 3,
                "periodSeconds": 10,
                "tcpSocket": {
                  "port": 8080
                },
                "timeoutSeconds": 3
              },
              "resources": {
                "limits": {
                  "memory": "256Mi"
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "128Mi"
                }
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "capabilities": {
                  "drop": [
                    "NET_RAW"
                  ]
                },
                "seccompProfile": {
                  "type": "RuntimeDefault"
                }
              },
              "startupProbe": {
                "failureThreshold": 60,
                "periodSeconds": 5,
                "tcpSocket": {
                  "port": 8080
                },
                "timeoutSeconds": 3
              },
              "volumeMounts": [
                {
                  "mountPath": "/data",
                  "name": "data"
                }
              ]
            }
          ],
          "enableServiceLinks": false,
          "securityContext": {
            "seccompProfile": {
              "type": "RuntimeDefault"
            }
          },
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "name": "data",
              "persistentVolumeClaim": {
                "claimName": "api-data"
              }
            }
          ]
        }
      }
    }
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "kuben",
        "kuben.dev/app": "api",
        "kuben.dev/environment": "shop-prod",
        "kuben.dev/project": "shop"
      },
      "name": "api",
      "namespace": "kb-shop-prod"
    },
    "spec": {
      "ports": [
        {
          "appProtocol": "http",
          "name": "http",
          "port": 80,
          "protocol": "TCP",
          "targetPort": 8080
        }
      ],
      "selector": {
        "kuben.dev/app": "api",
        "kuben.dev/process": "web"
      },
      "type": "ClusterIP"
    }
  }
]
